--- a/GardeningServices/app/src/main/res/layout/fragment_home.xml
+++ b/GardeningServices/app/src/main/res/layout/fragment_home.xml
@@ -124,101 +124,111 @@
                     android:textColor="@color/selector_see_all"
                     android:clickable="true"/>
             </RelativeLayout>
-
-            <GridLayout
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rcV_category_home"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
-                android:columnCount="4"
-                app:layout_constraintTop_toBottomOf="@id/relativeLayout_categories">
+                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                android:clipToPadding="false"
+                app:spanCount="3"
+                app:layout_constraintTop_toBottomOf="@+id/relativeLayout_categories"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+<!--            <GridLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:layout_marginStart="15dp"-->
+<!--                android:layout_marginEnd="15dp"-->
+<!--                android:columnCount="4"-->
+<!--                app:layout_constraintTop_toBottomOf="@id/relativeLayout_categories">-->
 
-                <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/c1"
-                    style="@style/category"
-                    android:layout_column="0">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="100dp"
-                        android:layout_gravity="center_vertical|center_horizontal"
-                        android:gravity="center"
-                        android:orientation="vertical">
+<!--                <com.google.android.material.card.MaterialCardView-->
+<!--                    android:id="@+id/c1"-->
+<!--                    style="@style/category"-->
+<!--                    android:layout_column="0">-->
+<!--                    <LinearLayout-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="100dp"-->
+<!--                        android:layout_gravity="center_vertical|center_horizontal"-->
+<!--                        android:gravity="center"-->
+<!--                        android:orientation="vertical">-->
 
-                        <com.google.android.material.imageview.ShapeableImageView
-                            android:layout_width="50dp"
-                            android:layout_height="50dp"
-                            android:src="@drawable/ic_category_flower_24"
-                            />
+<!--                        <com.google.android.material.imageview.ShapeableImageView-->
+<!--                            android:layout_width="50dp"-->
+<!--                            android:layout_height="50dp"-->
+<!--                            android:src="@drawable/ic_category_flower_24"-->
+<!--                            />-->
 
-                        <com.google.android.material.textview.MaterialTextView
-                            style="@style/categoryTextView"
-                            android:text="@string/flower"/>
-                    </LinearLayout>
-                </com.google.android.material.card.MaterialCardView>
-                <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/c2"
-                    style="@style/category"
-                    android:layout_column="1">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="100dp"
-                        android:layout_gravity="center_vertical|center_horizontal"
-                        android:gravity="center"
-                        android:orientation="vertical">
+<!--                        <com.google.android.material.textview.MaterialTextView-->
+<!--                            style="@style/categoryTextView"-->
+<!--                            android:text="@string/flower"/>-->
+<!--                    </LinearLayout>-->
+<!--                </com.google.android.material.card.MaterialCardView>-->
+<!--                <com.google.android.material.card.MaterialCardView-->
+<!--                    android:id="@+id/c2"-->
+<!--                    style="@style/category"-->
+<!--                    android:layout_column="1">-->
+<!--                    <LinearLayout-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="100dp"-->
+<!--                        android:layout_gravity="center_vertical|center_horizontal"-->
+<!--                        android:gravity="center"-->
+<!--                        android:orientation="vertical">-->
 
-                        <com.google.android.material.imageview.ShapeableImageView
-                            android:layout_width="50dp"
-                            android:layout_height="50dp"
-                            android:src="@drawable/ic_category_fruit_24" />
+<!--                        <com.google.android.material.imageview.ShapeableImageView-->
+<!--                            android:layout_width="50dp"-->
+<!--                            android:layout_height="50dp"-->
+<!--                            android:src="@drawable/ic_category_fruit_24" />-->
 
-                        <com.google.android.material.textview.MaterialTextView
-                            style="@style/categoryTextView"
-                            android:text="@string/harvest"/>
-                    </LinearLayout>
-                </com.google.android.material.card.MaterialCardView>
-                <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/c3"
-                    style="@style/category"
-                    android:layout_column="2">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="100dp"
-                        android:layout_gravity="center_vertical|center_horizontal"
-                        android:gravity="center"
-                        android:orientation="vertical">
+<!--                        <com.google.android.material.textview.MaterialTextView-->
+<!--                            style="@style/categoryTextView"-->
+<!--                            android:text="@string/harvest"/>-->
+<!--                    </LinearLayout>-->
+<!--                </com.google.android.material.card.MaterialCardView>-->
+<!--                <com.google.android.material.card.MaterialCardView-->
+<!--                    android:id="@+id/c3"-->
+<!--                    style="@style/category"-->
+<!--                    android:layout_column="2">-->
+<!--                    <LinearLayout-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="100dp"-->
+<!--                        android:layout_gravity="center_vertical|center_horizontal"-->
+<!--                        android:gravity="center"-->
+<!--                        android:orientation="vertical">-->
 
-                        <com.google.android.material.imageview.ShapeableImageView
-                            android:layout_width="50dp"
-                            android:layout_height="50dp"
-                            android:src="@drawable/ic_category_vegetables_24"/>
+<!--                        <com.google.android.material.imageview.ShapeableImageView-->
+<!--                            android:layout_width="50dp"-->
+<!--                            android:layout_height="50dp"-->
+<!--                            android:src="@drawable/ic_category_vegetables_24"/>-->
 
-                        <com.google.android.material.textview.MaterialTextView
-                            style="@style/categoryTextView"
-                            android:text="@string/vegetables"/>
-                    </LinearLayout>
-                </com.google.android.material.card.MaterialCardView>
-                <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/c4"
-                    style="@style/category"
-                    android:layout_column="3">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="100dp"
-                        android:layout_gravity="center_vertical|center_horizontal"
-                        android:gravity="center"
-                        android:orientation="vertical">
+<!--                        <com.google.android.material.textview.MaterialTextView-->
+<!--                            style="@style/categoryTextView"-->
+<!--                            android:text="@string/vegetables"/>-->
+<!--                    </LinearLayout>-->
+<!--                </com.google.android.material.card.MaterialCardView>-->
+<!--                <com.google.android.material.card.MaterialCardView-->
+<!--                    android:id="@+id/c4"-->
+<!--                    style="@style/category"-->
+<!--                    android:layout_column="3">-->
+<!--                    <LinearLayout-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="100dp"-->
+<!--                        android:layout_gravity="center_vertical|center_horizontal"-->
+<!--                        android:gravity="center"-->
+<!--                        android:orientation="vertical">-->
 
-                        <com.google.android.material.imageview.ShapeableImageView
-                            android:layout_width="50dp"
-                            android:layout_height="50dp"
-                            android:src="@drawable/ic_category_herbal_24" />
+<!--                        <com.google.android.material.imageview.ShapeableImageView-->
+<!--                            android:layout_width="50dp"-->
+<!--                            android:layout_height="50dp"-->
+<!--                            android:src="@drawable/ic_category_herbal_24" />-->
 
-                        <com.google.android.material.textview.MaterialTextView
-                            style="@style/categoryTextView"
-                            android:text="@string/herbal"/>
-                    </LinearLayout>
-                </com.google.android.material.card.MaterialCardView>
-            </GridLayout>
+<!--                        <com.google.android.material.textview.MaterialTextView-->
+<!--                            style="@style/categoryTextView"-->
+<!--                            android:text="@string/herbal"/>-->
+<!--                    </LinearLayout>-->
+<!--                </com.google.android.material.card.MaterialCardView>-->
+<!--            </GridLayout>-->
 
         </androidx.constraintlayout.widget.ConstraintLayout>
         <androidx.constraintlayout.widget.ConstraintLayout
