--- a/GardeningServices/app/src/main/res/values/colors.xml
+++ b/GardeningServices/app/src/main/res/values/colors.xml
@@ -8,9 +8,11 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="Green1">#FF5DBA63</color>
+    <color name="Green2">#FF9ADA9E</color>
     <color name="Gray3">#FF7E7E7E</color>
     <color name="Gray4">#FFF7FAF8</color>
     <color name="White2">#FFF7FAF8</color>
+    <color name="White3">#FFF7FAF8</color>
     <color name="Yellow">#FF4C4E4C</color>
     <color name="Green">#008000</color>
 </resources>
