--- a/GardeningServices/app/src/main/res/layout/activity_sign_in.xml
+++ b/GardeningServices/app/src/main/res/layout/activity_sign_in.xml
@@ -96,6 +96,7 @@
                     android:lines="1"
                     android:drawableStart="@drawable/selector_sign_lock_icon"
                     android:fontFamily="@font/open_sans"
+                    android:inputType="textPassword"
                     android:drawablePadding="10sp"
                     android:hint="@string/Password" />
             </com.google.android.material.textfield.TextInputLayout>
