--- a/GardeningServices/app/src/main/res/values/colors.xml
+++ b/GardeningServices/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="Green1">#FF5DBA63</color>
     <color name="Green2">#FF9ADA9E</color>
+    <color name="Green3">#FFE1F3E3</color>
     <color name="Gray3">#FF7E7E7E</color>
     <color name="Gray4">#FFF7FAF8</color>
     <color name="White2">#FFF7FAF8</color>
