--- a/GardeningServices/app/src/main/res/layout/activity_see_all_good_of_category.xml
+++ b/GardeningServices/app/src/main/res/layout/activity_see_all_good_of_category.xml
@@ -12,15 +12,16 @@
         android:layout_width="match_parent"
         android:layout_height="50dp">
         <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:id="@+id/tv_back"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_centerVertical="true"
             android:layout_marginStart="15dp"
-            android:src="@drawable/ic_back_ios_new_24"/>
+            android:src="@drawable/selector_back_activity"/>
         <TextView
+            android:id="@+id/tv_title_good"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:text="@string/Category"
             android:textSize="20sp"
             app:fontFamily="@font/open_sans_bold"
             android:layout_centerHorizontal="true"
@@ -28,12 +29,12 @@
             android:gravity="center"/>
     </RelativeLayout>
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcV_category"
+        android:id="@+id/rcV_product"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         android:clipToPadding="false"
-        app:spanCount="3" />
+        app:spanCount="2" />
 </LinearLayout>
