--- a/GardeningServices/app/src/main/res/layout/item_category.xml
+++ b/GardeningServices/app/src/main/res/layout/item_category.xml
@@ -13,10 +13,18 @@
         android:layout_gravity="center_vertical|center_horizontal"
         android:gravity="center"
         android:orientation="vertical">
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/iv_image"
-            android:layout_width="60dp"
-            android:layout_height="60dp"/>
+        <RelativeLayout
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:background="@drawable/boarder_category">
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+                android:id="@+id/iv_image"
+                android:layout_width="45dp"
+                android:layout_height="45dp"/>
+        </RelativeLayout>
+
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_name"
             style="@style/categoryTextView"/>
