--- a/GardeningServices/app/src/main/res/values/styles.xml
+++ b/GardeningServices/app/src/main/res/values/styles.xml
@@ -69,4 +69,19 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:textAlignment">center</item>
     </style>
+    <style name="goodTextView" parent="Widget.MaterialComponents.TextView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">16sp</item>
+        <item name="fontFamily">@font/open_sans_bold</item>
+        <item name="android:layout_marginTop">5dp</item>
+    </style>
+    <style name="goodPriceTextView" parent="Widget.MaterialComponents.TextView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">13sp</item>
+        <item name="fontFamily">@font/open_sans</item>
+    </style>
 </resources>
