--- a/GardeningServices/app/src/main/res/layout/fragment_home.xml
+++ b/GardeningServices/app/src/main/res/layout/fragment_home.xml
@@ -126,8 +126,8 @@
                 android:id="@+id/rcV_category_home"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="15dp"
-                android:layout_marginEnd="15dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 android:clipToPadding="false"
                 app:spanCount="4"
@@ -270,8 +270,8 @@
                 android:id="@+id/rcV_package_home"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="15dp"
-                android:layout_marginEnd="15dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 android:clipToPadding="false"
                 app:spanCount="2"
@@ -534,13 +534,13 @@
                 android:id="@+id/rcV_services_home"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 android:clipToPadding="false"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/relativeLayout_service"
-                app:layout_constraintVertical_bias="0.0"
-                app:spanCount="3"
-                tools:layout_editor_absoluteX="15dp" />
+                app:spanCount="3"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_sale"
@@ -570,8 +570,8 @@
                 android:id="@+id/rcV_sale"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="15dp"
-                android:layout_marginEnd="15dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 android:clipToPadding="false"
                 app:spanCount="3"
