--- a/GardeningServices/app/src/main/res/layout/activity_sell_all_category.xml
+++ b/GardeningServices/app/src/main/res/layout/activity_sell_all_category.xml
@@ -12,11 +12,12 @@
         android:layout_width="match_parent"
         android:layout_height="50dp">
         <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:id="@+id/tv_back_category"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_centerVertical="true"
             android:layout_marginStart="15dp"
-            android:src="@drawable/ic_back_ios_new_24"/>
+            android:src="@drawable/selector_back_activity"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="40dp"
