--- a/GardeningServices/app/src/main/res/values/themes.xml
+++ b/GardeningServices/app/src/main/res/values/themes.xml
@@ -22,4 +22,8 @@
     <style name="Theme.GardeningServices.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.GardeningServices.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/ic_dragon_scales</item>
+        <item name="android:windowAnimationStyle">@anim/ttb</item>
+    </style>
 </resources>
